# Goggles

./: .gitignore  .semgrep.yml  .semgrepignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ROADMAP.md  pixi.toml
filter-chain/: CMakeLists.txt
filter-chain/cmake/: EmbedAssets.cmake  FilterChainDependencies.cmake  GogglesFilterChainConfig.cmake.in
filter-chain/include/: goggles_filter_chain.h  goggles_filter_chain.hpp
filter-chain/include/goggles/filter_chain/: api.hpp  error.hpp  filter_controls.hpp  vulkan_context.hpp
filter-chain/src/api/: abi_validation.hpp  c_api.cpp  cpp_wrapper.cpp
filter-chain/src/chain/: c_api.cpp  chain_builder.cpp  chain_builder.hpp  chain_controls.cpp  chain_executor.cpp  chain_executor.hpp  chain_resources.cpp  chain_resources.hpp  chain_runtime.cpp  chain_runtime.hpp  cpp_wrapper.cpp  debug_label_scope.hpp  downsample_pass.cpp  filter_pass.cpp  filter_pass.hpp  frame_history.cpp  frame_history.hpp  framebuffer.cpp  output_pass.cpp  output_pass.hpp  pass.hpp  preset_parser.cpp  preset_parser.hpp  semantic_binder.hpp
filter-chain/src/diagnostics/: diagnostic_session.cpp
filter-chain/src/runtime/: chain.cpp  chain.hpp  device.cpp  instance.cpp  instance.hpp  program.cpp  source_resolver.cpp
filter-chain/src/shader/: retroarch_preprocessor.cpp  retroarch_preprocessor.hpp  shader_runtime.cpp  shader_runtime.hpp  slang_reflect.cpp  slang_reflect.hpp
filter-chain/src/support/: logging.cpp  logging.hpp
filter-chain/src/texture/: texture_loader.cpp  texture_loader.hpp
filter-chain/tests/: CMakeLists.txt
filter-chain/tests/consumer/shared/: main.cpp
filter-chain/tests/consumer/static/: main.cpp
filter-chain/tests/contract/: shader_batch_report.cpp  test_filter_chain.cpp  test_filter_chain_c_api_contracts.cpp  test_filter_chain_retarget_contract.cpp  test_filter_controls.cpp  test_gpu_timestamp_pool.cpp  test_preset_parser.cpp  test_retroarch_preprocessor.cpp  test_runtime_diagnostics.cpp  test_semantic_binder.cpp  test_shader_runtime.cpp  test_shader_validation.cpp  test_slang_reflect.cpp  test_source_provenance.cpp  test_zfast_integration.cpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  cli.cpp  cli.hpp  main.cpp
src/compositor/: CMakeLists.txt  compositor_core.cpp  compositor_cursor.cpp  compositor_focus.cpp  compositor_input.cpp  compositor_layer_shell.cpp  compositor_present.cpp  compositor_protocol_hooks.hpp  compositor_runtime_metrics.hpp  compositor_server.cpp  compositor_server.hpp  compositor_state.hpp  compositor_targets.hpp  compositor_xdg.cpp  compositor_xwayland.cpp
src/compositor/protocol/: .clang-tidy  wlr-layer-shell-unstable-v1-protocol.h
src/render/: CMakeLists.txt
src/render/backend/: CMakeLists.txt  external_frame_importer.cpp  external_frame_importer.hpp  filter_chain_controller.cpp  filter_chain_controller.hpp  render_output.cpp  render_output.hpp  stb_image_write_impl.cpp  vulkan_backend.cpp  vulkan_backend.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_debug.hpp  vulkan_error.hpp
src/render/chain/: CMakeLists.txt  README.md  chain_builder.cpp  chain_builder.hpp  chain_controls.hpp  chain_executor.cpp  chain_executor.hpp  chain_resources.cpp  chain_resources.hpp  chain_runtime.cpp  chain_runtime.hpp  downsample_pass.cpp  downsample_pass.hpp  filter_chain.cpp  filter_chain.hpp  filter_chain_core.cpp  filter_chain_core.hpp  filter_controls.cpp  filter_controls.hpp  filter_pass.cpp  filter_pass.hpp  framebuffer.cpp  framebuffer.hpp  pass.hpp  preset_parser.hpp  vulkan_context.hpp  vulkan_result.hpp
src/render/chain/docs/: integration_guide.md  spec.md
src/render/shader/: CMakeLists.txt  retroarch_preprocessor.cpp  retroarch_preprocessor.hpp  shader_runtime.cpp  shader_runtime.hpp
src/render/texture/: CMakeLists.txt
src/ui/: CMakeLists.txt  imgui_layer.cpp  imgui_layer.hpp
src/util/: CMakeLists.txt  config.cpp  config.hpp  error.hpp  external_image.hpp  job_system.hpp  logging.hpp  paths.hpp  queues.hpp  runtime_metrics.hpp  scale_mode.hpp  unique_fd.hpp
src/util/diagnostics/: CMakeLists.txt  diagnostic_event.hpp  diagnostic_policy.hpp  diagnostic_session.cpp  gpu_timestamp_pool.cpp  gpu_timestamp_pool.hpp
tests/: CMakeLists.txt
tests/app/: test_cli.cpp  test_headless_child_exit.cpp  test_windowed_shutdown_contracts.cpp
tests/clients/: CMakeLists.txt  gradient_client.cpp  multi_surface_client.cpp  quadrant_client.cpp  solid_color_client.cpp  wl_helpers.hpp
tests/golden/: README.md
tests/gpu/: CMakeLists.txt  capture_helper.py  conftest.py  test_frame_diff.py  test_pixel_accuracy.py  test_shader_state.py  test_validation_layers.py
tests/render/: shader_batch_report.cpp  shader_batch_report.hpp  shader_batch_report_main.cpp  test_authoring_validation.cpp  test_binding_ledger.cpp  test_compile_report.cpp  test_diagnostic_event_model.cpp  test_diagnostic_ledgers.cpp  test_diagnostic_reporting.cpp  test_diagnostic_session.cpp  test_diagnostic_sinks.cpp  test_filter_boundary_contracts.cpp  test_filter_chain.cpp  test_filter_chain_c_api_contracts.cpp  test_filter_chain_retarget.cpp  test_filter_chain_retarget_contract.cpp  test_filter_controls.cpp  test_gpu_timestamp_pool.cpp  test_runtime_diagnostics.cpp  test_shader_batch_report.cpp  test_source_provenance.cpp  test_vulkan_backend_subsystem_contracts.cpp  test_zfast_integration.cpp
tests/semgrep/: README.md  verify_semgrep_fixtures.py
tests/util/: test_config.cpp  test_error.cpp  test_queues.cpp
tests/util/test_data/: invalid_config.toml  malformed_config.toml  valid_config.toml
tests/visual/: CMakeLists.txt  image_compare.cpp  image_compare.hpp  image_compare_cli.cpp  runtime_capture.cpp  runtime_capture.hpp  runtime_capture_main.cpp  test_aspect_ratio.cpp  test_image_compare.cpp  test_intermediate_golden.cpp  test_semantic_probes.cpp  test_shader_basic.cpp  test_temporal_golden.cpp
tests/visual/configs/: aspect_dynamic.toml  aspect_fill.toml  aspect_fit_pillarbox.toml  aspect_integer_1x.toml  aspect_integer_2x.toml  aspect_integer_auto.toml  aspect_stretch.toml  shader_zfast.toml
(+126 files in other folders)
